--- a/project-0/index.html
+++ b/project-0/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            display: flex;
+        }
+    </style>
     <title>Google Search</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li>
-                    <a href="images.html">Google Images</a>
-                    <a href="advance.html">Google Advance Search</a>
-                </li>
+                <li><a href="images.html">Google Images</a></li>
+                <li><a href="advance.html">Google Advance Search</a></li>
             </ul>
         </nav>
     </header>
